--- a/meiduo_mall/meiduo_mall/templates/index.html
+++ b/meiduo_mall/meiduo_mall/templates/index.html
@@ -19,17 +19,17 @@
 				<div class="login_btn fl" v-if="username">
 					欢迎您：<em>[[ username ]]</em>
 					<span>|</span>
-					<a href="/logout/" class="quit">退出</a>
+					<a href="{{ url ('users:logout') }}" class="quit">退出</a>
 				</div>
 				<div class="login_btn fl" v-else>
-					<a href="/login/">登录</a>
+ 					<a href="{{ url ('users:login') }}">登录</a>
 					<span>|</span>
-					<a href="/register/">注册</a>
+					<a href="{{ url ('users:register') }}">注册</a>
 				</div>
 
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="/info/">用户中心</a>
+					<a href="{{ url ('users:info') }}">用户中心</a>
 					<span>|</span>
 					<a href="{{ static ('cart.html') }}">我的购物车</a>
 					<span>|</span>
