展示省市区，未成功

--- a/meiduo_mall/meiduo_mall/templates/login.html
+++ b/meiduo_mall/meiduo_mall/templates/login.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>美多商城-登录</title>
-    <link rel="stylesheet" type="text/css" href="{{ static('css/reset.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ static('css/main.css') }}">
-    <script type="text/javascript" src="{{ static('js/host.js') }}"></script>
-    <script type="text/javascript" src="{{ static('js/vue-2.5.16.js') }}"></script>
-    <script type="text/javascript" src="{{ static('js/axios-0.18.0.min.js') }}"></script>
-</head>
+{% extends 'base.html' %}
+{% block body %}
 <body>
 <div class="login_top clearfix">
     <a href="/" class="login_logo"><img src="{{ static('images/logo02.png') }}"></a>
@@ -51,7 +40,7 @@
             <div class="third_party">
                 <a @click="qq_login" class="qq_login">QQ</a>
                 <a href="#" class="weixin_login">微信</a>
-                <a href="/register/" class="register_btn">立即注册</a>
+                <a href="{{ url ('users:register') }}" class="register_btn">立即注册</a>
             </div>
 
         </div>
@@ -78,3 +67,4 @@
 <script type="text/javascript" src="{{ static('js/common.js') }}"></script>
 </body>
 </html>
+{% endblock body %}
