--- a/meiduo_mall/meiduo_mall/templates/index.html
+++ b/meiduo_mall/meiduo_mall/templates/index.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>美多商城-首页</title>
-	<link rel="stylesheet" type="text/css" href="{{ static ('css/reset.css') }}">
-	<link rel="stylesheet" type="text/css" href="{{ static ('css/main.css') }}">
-    <script type="text/javascript" src="{{ static ('js/host.js') }}"></script>
-	<script type="text/javascript" src="{{ static ('js/vue-2.5.16.js') }}"></script>
-    <script type="text/javascript" src="{{ static ('js/axios-0.18.0.min.js') }}"></script>
-	<script type="text/javascript" src="{{ static ('js/jquery-1.12.4.min.js') }}"></script>
-</head>
+{% extends 'base.html' %}
+{% block body %}
 <body>
 	<div id="app" v-cloak>
 	<div class="header_con">
@@ -36,7 +26,7 @@
 					<a href="{{ static ('user_center_order.html') }}">我的订单</a>
 				</div>
 			</div>
-		</div>		
+		</div>
 	</div>
 
 	<div class="search_bar clearfix">
@@ -52,7 +42,7 @@
 				<li><a href="#">美妆个护</a></li>
 				<li><a href="#">买2免1</a></li>
 			</ul>
-		</div>	
+		</div>
 		
 		<div class="guest_cart fr">
 			<a href="{{ static ('cart.html') }}" class="cart_name fl">我的购物车</a>
@@ -572,3 +562,4 @@
 	<script type="text/javascript" src="{{ static ('js/index.js') }}"></script>
 </body>
 </html>
+{% endblock body %}
