--- a/meiduo_mall/meiduo_mall/templates/register.html
+++ b/meiduo_mall/meiduo_mall/templates/register.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>美多商城-注册</title>
-    <link rel="stylesheet" type="text/css" href="{{ static("css/reset.css") }}">
-    <link rel="stylesheet" type="text/css" href="{{ static("css/main.css") }}">
-    <script type="text/javascript" src="{{ static("js/host.js") }}"></script>
-    <script type="text/javascript" src="{{ static("js/vue-2.5.16.js") }}"></script>
-    <script type="text/javascript" src="{{ static("js/axios-0.18.0.min.js") }}"></script>
-</head>
+{% extends 'base.html' %}
+{% block body %}
 <body>
 <div class="register_con">
     <div class="l_con fl">
@@ -99,3 +89,4 @@
 <script type="text/javascript" src="{{ static("js/register.js") }}"></script>
 </body>
 </html>
+{% endblock body %}
