--- a/meiduo_mall/meiduo_mall/templates/user_center_site.html
+++ b/meiduo_mall/meiduo_mall/templates/user_center_site.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>美多商城-用户中心</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/main.css">
-    <script type="text/javascript" src="/static/js/host.js"></script>
-    <script type="text/javascript" src="/static/js/vue-2.5.16.js"></script>
-    <script type="text/javascript" src="/static/js/axios-0.18.0.min.js"></script>
-</head>
+{% extends 'base.html' %}
+{% block body %}
 <body>
 <div id="app" v-cloak>
     <div class="header_con">
@@ -33,7 +23,7 @@
         </div>
     </div>
     <div class="search_bar clearfix">
-        <a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
+        <a href="/" class="logo fl"><img src="{{ static ('images/logo.png') }}"></a>
         <div class="search_wrap fl">
             <form method="get" action="/search/" class="search_con">
                 <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
@@ -161,7 +151,8 @@
     let addresses = {{ addresses | safe }};
     let default_address_id = {{ default_address_id }};
 </script>
-<script type="text/javascript" src="/static/js/common.js"></script>
-<script type="text/javascript" src="/static/js/user_center_site.js"></script>
+<script type="text/javascript" src="{{ static ('js/common.js') }}"></script>
+<script type="text/javascript" src="{{ static ('js/user_center_site.js') }}"></script>
 </body>
 </html>
+{% endblock body %}
