--- a/meiduo_mall/meiduo_mall/templates/base.html
+++ b/meiduo_mall/meiduo_mall/templates/base.html
@@ -9,9 +9,24 @@
 
 	<link rel="stylesheet" type="text/css" href="{{ static('css/reset.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ static('css/main.css') }}">
+    <link rel="shortcut icon" href="{{ static('favicon.ico') }}" type="image/x-icon">
     <script type="text/javascript" src="{{ static('js/host.js') }}"></script>
 	<script type="text/javascript" src="{{ static('js/vue-2.5.16.js') }}"></script>
     <script type="text/javascript" src="{{ static('js/axios-0.18.0.min.js') }}"></script>
     <script type="text/javascript" src="{{ static('js/jquery-1.12.4.min.js') }}"></script>
 </head>
 {% block body %}{% endblock %}
+        <div class="footer no-mp">
+            <div class="foot_link">
+                <a href="#">关于我们</a>
+                <span>|</span>
+                <a href="#">联系我们</a>
+                <span>|</span>
+                <a href="#">招聘人才</a>
+                <span>|</span>
+                <a href="#">友情链接</a>
+            </div>
+            <p>CopyRight © 2016 北京美多商业股份有限公司 All Rights Reserved</p>
+            <p>电话：010-****888 京ICP备*******8号</p>
+        </div>
+{% block script %}{% endblock %}
