--- a/meiduo_mall/meiduo_mall/templates/index.html
+++ b/meiduo_mall/meiduo_mall/templates/index.html
@@ -542,24 +542,12 @@
 			</div>
 		</div>
 	</div>
-
-	<div class="footer">
-		<div class="foot_link">
-			<a href="#">关于我们</a>
-			<span>|</span>
-			<a href="#">联系我们</a>
-			<span>|</span>
-			<a href="#">招聘人才</a>
-			<span>|</span>
-			<a href="#">友情链接</a>		
-		</div>
-		<p>CopyRight © 2016 北京美多商业股份有限公司 All Rights Reserved</p>
-		<p>电话：010-****888    京ICP备*******8号</p>
-	</div>
-	</div>
-	<script type="text/javascript" src="{{ static ('js/slide.js') }}"></script>
-	<script type="text/javascript" src="{{ static ('js/common.js') }}"></script>
-	<script type="text/javascript" src="{{ static ('js/index.js') }}"></script>
+{% endblock body %}
+{% block script %}
+</div>
+    <script type="text/javascript" src="{{ static ('js/slide.js') }}"></script>
+    <script type="text/javascript" src="{{ static ('js/common.js') }}"></script>
+    <script type="text/javascript" src="{{ static ('js/index.js') }}"></script>
 </body>
 </html>
-{% endblock body %}
+{% endblock %}
