--- a/meiduo_mall/meiduo_mall/templates/oauth_callback.html
+++ b/meiduo_mall/meiduo_mall/templates/oauth_callback.html
@@ -63,22 +63,12 @@
                 </div>
             </div>
         </div>
+{% endblock body %}
 
-        <div class="footer no-mp">
-            <div class="foot_link">
-                <a href="#">关于我们</a>
-                <span>|</span>
-                <a href="#">联系我们</a>
-                <span>|</span>
-                <a href="#">招聘人才</a>
-                <span>|</span>
-                <a href="#">友情链接</a>
-            </div>
-            <p>CopyRight © 2016 北京美多商业股份有限公司 All Rights Reserved</p>
-            <p>电话：010-****888 京ICP备*******8号</p>
+
+{% block script %}
         </div>
     </div>
-</div>
 <script>
     var openid = "{{ openid }}";
 </script>
@@ -86,4 +76,4 @@
 <script type="text/javascript" src="{{ static('js/oauth_callback.js') }}"></script>
 </body>
 </html>
-{% endblock body %}
+{% endblock %}
