--- a/meiduo_mall/meiduo_mall/templates/index.html
+++ b/meiduo_mall/meiduo_mall/templates/index.html
@@ -78,7 +78,7 @@
         <div class="pos_center_con clearfix">
             <ul class="slide">
                 {% for content in contents.index_lbt %}
-                    <li><a href="{{ content.url }}"><img src="{{ content.image }}" alt="{{ content.title }}"></a></li>
+                    <li><a href="{{ content.url }}"><img src="{{ content.image.url }}" alt="{{ content.title }}"></a></li>
                 {% endfor %}
             </ul>
             <div class="prev"></div>
@@ -120,7 +120,7 @@
                     {% endfor %}
                 </ul>
                 {% for content in contents.index_ytgg %}
-                    <a href="{{ content.url }}" class="advs"><img src="{{ content.image }}"></a>
+                    <a href="{{ content.url }}" class="advs"><img src="{{ content.image.url }}"></a>
                 {% endfor %}
             </div>
         </div>
@@ -136,7 +136,7 @@
             </div>
             <div class="goods_con clearfix">
                 <div class="goods_banner fl">
-                    <img src="{{ contents.index_1f_logo.0.image }}">
+                    <img src="{{ contents.index_1f_logo.0.image.url }}">
                     <div class="channel">
                         {% for content in contents.index_1f_pd %}
                             <a href="{{ content.url }}">{{ content.title }}</a>
@@ -150,9 +150,9 @@
                 </div>
                 <div class="goods_list_con">
                     <ul v-show="f1_tab===1" class="goods_list fl goods_list_show">
-                        {% for content in contents.index_1f_bq %}
+                        {% for content in contents.index_1f_ssxp %}
                             <li>
-                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                                 <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                                 <div class="price">{{ content.text }}</div>
                             </li>
@@ -161,16 +161,16 @@
                     <ul v-show="f1_tab===2" class="goods_list fl">
                         {% for content in contents.index_1f_cxdj %}
                             <li>
-                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                                 <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                                 <div class="price">{{ content.text }}</div>
                             </li>
                         {% endfor %}
                     </ul>
-                    <ul v-show="f1_tab===2" class="goods_list fl">
-                        {% for content in contents.index_1f_cxdj %}
+                    <ul v-show="f1_tab===3" class="goods_list fl">
+                        {% for content in contents.index_1f_sjpj %}
                             <li>
-                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                                 <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                                 <div class="price">{{ content.text }}</div>
                             </li>
@@ -190,7 +190,7 @@
             </div>
             <div class="goods_con clearfix">
                 <div class="goods_banner fl">
-                    <img src="{{ contents.index_2f_logo.0.image }}">
+                    <img src="{{ contents.index_2f_logo.0.image.url }}">
                     <div class="channel">
                         {% for content in contents.index_2f_pd %}
                             <a href="{{ content.url }}">{{ content.title }}</a>
@@ -206,7 +206,7 @@
                     <ul v-show="f2_tab===1" class="goods_list fl">
                         {% for content in contents.index_2f_cxdj %}
                             <li>
-                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                                 <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                                 <div class="price">{{ content.text }}</div>
                             </li>
@@ -215,7 +215,7 @@
                     <ul v-show="f2_tab===2" class="goods_list fl">
                         {% for content in contents.index_2f_jjhg %}
                             <li>
-                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                                 <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                                 <div class="price">{{ content.text }}</div>
                             </li>
@@ -235,7 +235,7 @@
             </div>
             <div class="goods_con clearfix">
                 <div class="goods_banner fl">
-                    <img src="{{ contents.index_3f_logo.0.image }}">
+                    <img src="{{ contents.index_3f_logo.0.image.url }}">
                     <div class="channel">
                         {% for content in contents.index_3f_pd %}
                             <a href="{{ content.url }}">{{ content.title }}</a>
@@ -251,7 +251,7 @@
                     <ul v-show="f3_tab===1" class="goods_list fl">
                         {% for content in contents.index_3f_shyp %}
                             <li>
-                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                                 <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                                 <div class="price">{{ content.text }}</div>
                             </li>
@@ -260,12 +260,12 @@
                     <ul v-show="f3_tab===2" class="goods_list fl">
                         {% for content in contents.index_3f_cfyp %}
                             <li>
-                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                                <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                                 <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                                 <div class="price">{{ content.text }}</div>
                             </li>
                         {% endfor %}
-                    </ul>
+                    </ul>meiduo_27@192.168.13.48
                 </div>
             </div>
         </div>
