--- a/meiduo_mall/meiduo_mall/templates/detail.html
+++ b/meiduo_mall/meiduo_mall/templates/detail.html
@@ -149,7 +149,7 @@
 
             <div class="total">总价：<em>[[ sku_amount ]]元</em></div>
             <div class="operate_btn">
-                <a href="javascript:;" class="add_cart" id="add_cart">加入购物车</a>
+                <a href="javascript:;" class="add_cart" id="add_cart" @click="add_cart">加入购物车</a>
             </div>
         </div>
     </div>
