--- a/meiduo_mall/meiduo_mall/templates/index.html
+++ b/meiduo_mall/meiduo_mall/templates/index.html
@@ -21,7 +21,7 @@
                         <span>|</span>
                         <a href="{{ url ('users:info') }}">用户中心</a>
                         <span>|</span>
-                        <a href="{{ static ('cart.html') }}">我的购物车</a>
+                        <a href="{{ url ('carts:cart') }}">我的购物车</a>
                         <span>|</span>
                         <a href="{{ static ('user_center_order.html') }}">我的订单</a>
                     </div>
@@ -45,7 +45,7 @@
             </div>
 
             <div class="guest_cart fr">
-                <a href="{{ static ('cart.html') }}" class="cart_name fl">我的购物车</a>
+                <a href="{{ url ('carts:cart') }}" class="cart_name fl">我的购物车</a>
                 <div class="goods_count fl" id="show_count">2</div>
                 <ul class="cart_goods_show">
                     <li>
