--- a/meiduo_mall/meiduo_mall/templates/cart.html
+++ b/meiduo_mall/meiduo_mall/templates/cart.html
@@ -38,7 +38,7 @@
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="/" class="logo fl"><img src="/static/images/logo.png"></a>
+		<a href="{{ url ("contents:index") }}" class="logo fl"><img src="/static/images/logo.png"></a>
 		<div class="search_wrap fl">
 			<form method="get" action="/search/" class="search_con">
 				<input type="hidden" name="csrf_token" value="{{ csrf_token }}">
