--- a/meiduo_mall/meiduo_mall/templates/pay_success.html
+++ b/meiduo_mall/meiduo_mall/templates/pay_success.html
@@ -57,7 +57,7 @@
 <div class="common_list_con clearfix">
     <div class="order_success">
         <p><b>订单支付成功</b></p>
-        <p>您的订单已成功支付，支付交易号：{{ trade_id }}</p>
+        <p>您的订单已成功支付，支付交易号：{{ order_id }}</p>
         <p><a href="/orders/info/1/">您可以在【用户中心】->【我的订单】查看该订单</a></p>
     </div>
 </div>
