--- a/meiduo_mall/meiduo_mall/templates/user_center_order.html
+++ b/meiduo_mall/meiduo_mall/templates/user_center_order.html
@@ -88,10 +88,10 @@
                             {% endfor %}
                         </td>
                         <td width="15%">{{ order.total_amount }}元<br>含运费：{{ order.freight }}元</td>
-                        <td width="15%">{{ order.pay_method_name }}</td>
+                        <td width="15%">{{ order.get_pay_method_display() }}</td>
                         <td width="15%">
                             <a @click="oper_btn_click('{{ order.order_id }}', {{ order.status }})"
-                               class="oper_btn">{{ order.status_name }}</a>
+                               class="oper_btn">{{ order.get_status_display() }}</a>
                         </td>
                     </tr>
                     </tbody>
