--- a/meiduo_mall/meiduo_mall/templates/index.html
+++ b/meiduo_mall/meiduo_mall/templates/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="search_bar clearfix">
-            <a href="index.html" class="logo fl"><img src="{{ static ('images/logo.png') }}"></a>
+            <a href="/" class="logo fl"><img src="{{ static ('images/logo.png') }}"></a>
             <div class="search_wrap fl">
                 <form method="get" action="/search/" class="search_con">
                     <input type="text" class="input_text fl" name="q" placeholder="搜索商品">
