--- a/meiduo_mall/meiduo_mall/templates/pay_success.html
+++ b/meiduo_mall/meiduo_mall/templates/pay_success.html
@@ -1,15 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>美多商城-支付成功</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/main.css">
-    <script type="text/javascript" src="/static/js/host.js"></script>
-    <script type="text/javascript" src="/static/js/vue-2.5.16.js"></script>
-    <script type="text/javascript" src="/static/js/axios-0.18.0.min.js"></script>
-</head>
+{% extends 'base.html' %}
+{% block body %}
 <body>
 <div class="header_con">
     <div class="header">
@@ -57,25 +47,14 @@
 <div class="common_list_con clearfix">
     <div class="order_success">
         <p><b>订单支付成功</b></p>
-        <p>您的订单已成功支付，支付交易号：{{ order_id }}</p>
+        <p>您的订单已成功支付，支付交易号：{{ trade_id }}</p>
         <p><a href="/orders/info/1/">您可以在【用户中心】->【我的订单】查看该订单</a></p>
     </div>
 </div>
-
-<div class="footer">
-    <div class="foot_link">
-        <a href="#">关于我们</a>
-        <span>|</span>
-        <a href="#">联系我们</a>
-        <span>|</span>
-        <a href="#">招聘人才</a>
-        <span>|</span>
-        <a href="#">友情链接</a>
-    </div>
-    <p>CopyRight © 2016 北京美多商业股份有限公司 All Rights Reserved</p>
-    <p>电话：010-****888 京ICP备*******8号</p>
-</div>
+{% endblock body %}
+{% block script %}
 <script type="text/javascript" src="/static/js/common.js"></script>
 <script type="text/javascript" src="/static/js/base.js"></script>
 </body>
 </html>
+{% endblock %}
