--- a/meiduo_mall/meiduo_mall/templates/register.html
+++ b/meiduo_mall/meiduo_mall/templates/register.html
@@ -71,21 +71,9 @@
         </div>
     </div>
 </div>
-
-<div class="footer no-mp">
-    <div class="foot_link">
-        <a href="#">关于我们</a>
-        <span>|</span>
-        <a href="#">联系我们</a>
-        <span>|</span>
-        <a href="#">招聘人才</a>
-        <span>|</span>
-        <a href="#">友情链接</a>
-    </div>
-    <p>CopyRight © 2016 北京美多商业股份有限公司 All Rights Reserved</p>
-    <p>电话：010-****888 京ICP备*******8号</p>
-</div>
+{% endblock body %}
+{% block script %}
 <script type="text/javascript" src="{{ static("js/register.js") }}"></script>
 </body>
 </html>
-{% endblock body %}
+{% endblock %}
