--- a/meiduo_mall/meiduo_mall/templates/user_center_info.html
+++ b/meiduo_mall/meiduo_mall/templates/user_center_info.html
@@ -53,6 +53,7 @@
                 <li><a href="/orders/info/1/">· 全部订单</a></li>
                 <li><a href="{{ url ('users:addresses') }}">· 收货地址</a></li>
                 <li><a href="/password/">· 修改密码</a></li>
+                <li><a href="/wallet/">· 我的钱包</a></li>
             </ul>
         </div>
         <div class="right_content clearfix">
