--- a/meiduo_mall/meiduo_mall/static/css/main.css
+++ b/meiduo_mall/meiduo_mall/static/css/main.css
@@ -677,8 +677,9 @@ html,body{height:100%}
 .bar_code_tip{text-align:center;margin-top:10px;font-size:12px;}
 .third_party{border-top:1px solid #e0e0e0;margin-top:30px}
 .qq_login,.weixin_login,.register_btn,.weibo_login{float:left;line-height:30px;margin-left:15px;margin-top:7px;color:#666;font-size:12px;text-indent:22px;background:url(../images/Weibo.png) left 7px no-repeat;}
-/*.weibo_login{float:left;line-height:30px;margin-left:15px;margin-top:7px;color:#666;font-size:12px;text-indent:22px;background:url(../images/Weibo.png) left 7px no-repeat;;background-size: 35px 35px;background-position: -75% 40%;}*/
-
+.qq_login:hover,.weixin_login:hover,.weibo_login:hover,.register_btn:hover{color:#e3101e;text-decoration:underline}
+.weixin_login{background-position:left -35px;}
+.weibo_login{background-position:left -75px;}
 
 .qq_login:hover,.weixin_login:hover,.register_btn:hover{color:#e3101e;text-decoration:underline}
 .weixin_login{background-position:left -35px;}
