--- a/meiduo_mall/meiduo_mall/templates/base.html
+++ b/meiduo_mall/meiduo_mall/templates/base.html
@@ -14,56 +14,10 @@
 	<script type="text/javascript" src="{{ static('js/vue-2.5.16.js') }}"></script>
     <script type="text/javascript" src="{{ static('js/axios-0.18.0.min.js') }}"></script>
     <script type="text/javascript" src="{{ static('js/jquery-1.12.4.min.js') }}"></script>
+    <link href="{{ static('css/slide.css') }}" rel="stylesheet">
+    {% block css %}{% endblock %}
 </head>
 {% block body %}{% endblock %}
-<div class="slide">
-	<ul class="icon">
-		<li class="up" title="上一页"></li>
-		<li class="qq"></li>
-		<li class="tel"></li>
-		<li class="wx"></li>
-		<li class="down" title="下一页"></li>
-	</ul>
-	<ul class="info">
-		<li class="qq">
-			<p>在线沟通，请点我<a href="http://wpa.qq.com/msgrd?v=3&uin=123456789&site=qq&menu=yes" target="_blank">在线咨询</a></p>
-		</li>
-		<li class="tel">
-			<p>咨询热线：<br>400-800-8888<br>客服qq：<br>123456789</p>
-		</li>
-		<li class="wx">
-			<div class="img"><img src="img/1441956938.png" /></div>
-		</li>
-	</ul>
-</div>
-<div id="btn" class="index_cy"></div>
-
-<script type="text/javascript">
-$(function(){
-
-	$('.slide .icon li').not('.up,.down').mouseenter(function(){
-		$('.slide .info').addClass('hover');
-		$('.slide .info li').hide();
-		$('.slide .info li.'+$(this).attr('class')).show();//.slide .info li.qq
-	});
-	$('.slide').mouseleave(function(){
-		$('.slide .info').removeClass('hover');
-	});
-
-	$('#btn').click(function(){
-		$('.slide').toggle();
-		if($(this).hasClass('index_cy')){
-			$(this).removeClass('index_cy');
-			$(this).addClass('index_cy2');
-		}else{
-			$(this).removeClass('index_cy2');
-			$(this).addClass('index_cy');
-		}
-
-	});
-
-});
-</script>
         <div class="footer no-mp">
             <div class="foot_link">
                 <a href="#">关于我们</a>
@@ -77,4 +31,52 @@ $(function(){
             <p>CopyRight © 2016 北京美多商业股份有限公司 All Rights Reserved</p>
             <p>电话：010-****888 京ICP备*******8号</p>
         </div>
+{% block div %}{% endblock %}
+<div class="slide1">
+	<ul class="icon">
+		<li class="up" title="上一页"></li>
+		<li class="qq"></li>
+		<li class="tel"></li>
+		<li class="wx"></li>
+		<li class="down" title="下一页"></li>
+	</ul>
+	<ul class="info">
+		<li class="qq">
+			<p>在线沟通，请点我<a href="http://wpa.qq.com/msgrd?v=3&uin=3025937239&site=qq&menu=yes" target="_blank">在线咨询</a></p>
+		</li>
+		<li class="tel">
+			<p>咨询热线：<br>400-800-8888<br>客服qq：<br>3025937239</p>
+		</li>
+		<li class="wx">
+			<div class="img"><img src="{{ static('images/1561979223.png') }}" /></div>
+		</li>
+	</ul>
+</div>
+<div id="btn" class="index_cy"></div>
+<script type="text/javascript">
+$(function(){
+
+	$('.slide1 .icon li').not('.up,.down').mouseenter(function(){
+		$('.slide1 .info').addClass('hover');
+		$('.slide1 .info li').hide();
+		$('.slide1 .info li.'+$(this).attr('class')).show();//.slide1 .info li.qq
+	});
+	$('.slide1').mouseleave(function(){
+		$('.slide1 .info').removeClass('hover');
+	});
+
+	$('#btn').click(function(){
+		$('.slide1').toggle();
+		if($(this).hasClass('index_cy')){
+			$(this).removeClass('index_cy');
+			$(this).addClass('index_cy2');
+		}else{
+			$(this).removeClass('index_cy2');
+			$(this).addClass('index_cy');
+		}
+
+	});
+
+});
+</script>
 {% block script %}{% endblock %}
